# huohuo-companion

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  search.html  tsconfig.json  vite.config.ts
local/: config.example.json
src/: global.d.ts  main.ts  modelBounds.generated.ts  modelBoundsTypes.ts  notebookSearch.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
